--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,65 @@
-fastapi
-uvicorn
-httpx
+annotated-types==0.7.0
+ansimarkup==1.5.0
+anyio==4.11.0
+build==1.3.0
+cappa==0.30.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.3.0
+colorama==0.4.6
+copier==9.10.2
+copier-template-extensions==0.3.3
+copier-templates-extensions==0.3.2
+docutils==0.22.2
+dunamai==1.25.0
+failprint==1.0.6
+fastapi==0.118.0
+funcy==2.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+id==1.5.0
+idna==3.10
+insiders==4.1.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.3.0
+Jinja2==3.1.6
+jinja2-ansible-filters==1.3.2
+keyring==25.6.0
+loguru==0.7.3
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+more-itertools==10.8.0
+nh3==0.3.0
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.4.0
+plumbum==1.9.0
+prompt_toolkit==3.0.52
+psutil==7.1.0
+ptyprocess==0.7.0
+pydantic==2.11.9
+pydantic_core==2.33.2
+Pygments==2.19.2
+pypiserver==2.4.0
+pyproject_hooks==1.2.0
+PyYAML==6.0.3
+questionary==2.1.1
+readme_renderer==44.0
+requests==2.32.5
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==14.1.0
+sniffio==1.3.1
+starlette==0.48.0
+tomli==2.2.1
+twine==6.2.0
+type-lens==0.2.5
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+unearth==0.17.5
+urllib3==2.5.0
+uvicorn==0.37.0
+wcwidth==0.2.14
